--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -6,8 +6,9 @@
         <% var accepted = tip.accepted; %>
         <% var isAdmin = session.user && session.user.isAdmin; %>
         <% var isQuizAuthor = session.user && quizAuthorId && quizAuthorId === session.user.id; %>
+        <% var isTipAuthor = session.user && tip.authorId && tip.authorId === session.user.id; %>
 
-        <% if (accepted || isAdmin || isQuizAuthor) { %>
+    <% if (accepted || isAdmin || isQuizAuthor) { %>
 
             <li>
                 <%= tip.text %>
@@ -27,6 +28,14 @@
                     <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>?_method=DELETE">
                         <button>Delete</button>
                     </a>
+
+                <% } %>
+
+                <% if (isAdmin || isTipAuthor) { %>
+
+                <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>/edit">
+                    <button>Edit</button>
+                </a>
 
                 <% } %>
             </li>
